02. Install Jenkins/06. Jenkins-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: jenkins-ingress
  namespace: jenkins
spec:
  virtualhost:
    fqdn: jenkins.atostask.com
  routes:
    - conditions:
      - prefix: /
      services:
        - name: jenkins 
          port: 8080
---
# or you use this

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
spec:
  rules:
    - host: jenkins.atos.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
